force-app/main/default/objects/MigrationObjectConfig__c/MigrationObjectConfig__c.object-meta.xml
<CustomObject>
    <description>Per-object migration configuration within a job. Stores load order, field mappings reference, external ID field, and per-object counters.</description>
    <label>Migration Object Config</label>
    <nameField>
        <label>Object Config Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Migration Object Configs</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>