force-app/main/default/objects/MigrationObjectConfig__c/fields/AllowPartialSuccess__c.field-meta.xml
<CustomField>
    <fullName>AllowPartialSuccess__c</fullName>
    <defaultValue>true</defaultValue>
    <description>Object-level override for allOrNone DML behaviour. Inherits from MigrationJob when not explicitly set.</description>
    <label>Allow Partial Success</label>
    <type>Checkbox</type>
</CustomField>