force-app/main/default/objects/MigrationObjectConfig__c/fields/ExternalIdField__c.field-meta.xml
<CustomField>
    <fullName>ExternalIdField__c</fullName>
    <description>API name of the field used as the upsert key. Required when Mode is Upsert. Field must be marked as External ID on the target object.</description>
    <label>External ID Field</label>
    <length>80</length>
    <type>Text</type>
</CustomField>