force-app/main/default/objects/MigrationObjectConfig__c/fields/FailedCount__c.field-meta.xml
<CustomField>
    <fullName>FailedCount__c</fullName>
    <defaultValue>0</defaultValue>
    <label>Failed Count</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>