force-app/main/default/objects/MigrationObjectConfig__c/fields/HasSelfReference__c.field-meta.xml
<CustomField>
    <fullName>HasSelfReference__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Set by the relationship resolver when this object has a lookup back to itself (e.g. Contact.ReportsToId, Account.ParentId). Triggers the two-pass load strategy.</description>
    <label>Has Self Reference</label>
    <type>Checkbox</type>
</CustomField>