force-app/main/default/objects/MigrationObjectConfig__c/fields/IsActive__c.field-meta.xml
<CustomField>
    <fullName>IsActive__c</fullName>
    <description>When false, the object config is excluded from resolver and load execution. Allows temporarily disabling an object without deleting its field mappings.</description>
    <defaultValue>true</defaultValue>
    <label>Is Active</label>
    <type>Checkbox</type>
</CustomField>