force-app/main/default/objects/MigrationObjectConfig__c/fields/LoadedCount__c.field-meta.xml
<CustomField>
    <fullName>LoadedCount__c</fullName>
    <defaultValue>0</defaultValue>
    <label>Loaded Count</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>