force-app/main/default/objects/MigrationObjectConfig__c/fields/LoadOrder__c.field-meta.xml
<CustomField>
    <fullName>LoadOrder__c</fullName>
    <description>Topological sort result from the relationship resolver. Objects with a lower LoadOrder are loaded first. Objects with no parents have LoadOrder=1. Used by the bulk load engine to sequence object processing and by the rollback engine (reverse order delete).</description>
    <label>Load Order</label>
    <precision>3</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>