force-app/main/default/objects/MigrationObjectConfig__c/fields/MigrationJob__c.field-meta.xml
<CustomField>
    <fullName>MigrationJob__c</fullName>
    <label>Migration Job</label>
    <referenceTo>MigrationJob__c</referenceTo>
    <relationshipLabel>Migration Object Configs</relationshipLabel>
    <relationshipName>MigrationObjectConfigs</relationshipName>
    <relationshipOrder>0</relationshipOrder>
    <type>MasterDetail</type>
</CustomField>