force-app/main/default/objects/MigrationObjectConfig__c/fields/ObjectApiName__c.field-meta.xml
<CustomField>
    <fullName>ObjectApiName__c</fullName>
    <description>Salesforce API name of the object being migrated. Must exactly match the SObject API name (e.g. Account, Contact, MyCustomObject__c).</description>
    <label>Object API Name</label>
    <length>80</length>
    <required>true</required>
    <type>Text</type>
</CustomField>