force-app/main/default/objects/MigrationObjectConfig__c/fields/RecordTypeHandling__c.field-meta.xml
<CustomField>
    <fullName>RecordTypeHandling__c</fullName>
    <description>Controls how RecordType is resolved from source data. DeveloperName: source contains the RecordType developer name, resolved to Id at load time. StaticId: a single RecordTypeId is applied to all rows. None: RecordType is not set.</description>
    <label>Record Type Handling</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>None</fullName>
                <default>true</default>
                <label>None</label>
            </value>
            <value>
                <fullName>DeveloperName</fullName>
                <label>Developer Name</label>
            </value>
            <value>
                <fullName>StaticId</fullName>
                <label>Static ID</label>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>