force-app/main/default/objects/MigrationObjectConfig__c/fields/SelfReferenceField__c.field-meta.xml
<CustomField>
    <fullName>SelfReferenceField__c</fullName>
    <description>API name of the self-referential lookup field on this object (e.g. ReportsToId, ParentId, ManagerId). Populated by the relationship resolver when HasSelfReference is true.</description>
    <label>Self Reference Field</label>
    <length>80</length>
    <type>Text</type>
</CustomField>