force-app/main/default/objects/MigrationObjectConfig__c/fields/SourceRecordCount__c.field-meta.xml
<CustomField>
    <fullName>SourceRecordCount__c</fullName>
    <description>Total number of source rows for this object type. Set before job execution starts. Used to calculate total batches and percentage complete.</description>
    <label>Source Record Count</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>